k8s/base/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-app-external
spec:
  type: ExternalName
  externalName: nats.examples.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
