k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-app
spec:
  selector:
    app: tasks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
