k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasks-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: tasks-app-strip-prefix@kubernetescrd
spec:
  rules:
    - host: tasks-app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasks-app
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: tasks-app-external
                port:
                  number: 8080
